# cuentas-claras

./: .env.example  .eslintrc.cjs  .gitignore  CLAUDE.md  GETTING_STARTED.md  PLAN_TECNICO_FASE1.md  PRD.md  README.md  eslint.config.js  package-lock.json  package.json  prod-apply.txt  prod-backup-2026-07-13.sql  prod-plan.txt  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/: dependabot.yml
claude-setup/: README.md  install.sh
db/: README.md  schema_fase1.sql
scripts/: README.md  backlog.tsv  ident1-collapse.harness.test.ts  run-ticket.sh
services/: README.md
services/ingesta/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  run-local.sh
services/ingesta/app/: auth.py  config.py  llm.py  main.py  ocr.py  pdf.py  schemas.py  uploads.py
services/ingesta/app/parsing/: llm_extract.py  nativa_nacion.py  patagonia.py  receipts.py  statements.py
services/ingesta/app/routes/: health.py  receipts.py  statements.py
services/ingesta/tests/: conftest.py  test_auth.py  test_contract.py  test_health.py  test_llm_client.py  test_llm_extract.py  test_receipts_parsing.py  test_statements_parsing.py
services/ingesta/tests/fixtures/: bna_mastercard.txt  nativa_nacion.txt  patagonia_tabular.txt
src/: App.test.tsx  App.tsx  README.md  main.tsx  vite-env.d.ts
supabase/: README.md  config.toml
tasks/: A1-scaffolding.md  A3-supabase-y-auth.md  A5-workspace-activo-y-layout.md  B10-movimientos-lista-filtros.md  B6-categorias.md  B7-medios-tarjetas.md  B8-alta-movimientos.md  (+30 more)
(+277 files in other folders)
