[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cuentas-claras-ingesta"
version = "0.1.0"
description = "Microservicio de ingesta (OCR de comprobantes / parseo de resúmenes) para Cuentas Claras"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pyjwt[crypto]>=2.8",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.2",
    # Cliente HTTP del fallback por visión (Fase B, F2-12). Síncrono, corre
    # dentro de run_with_timeout (en un thread).
    "httpx>=0.27",
]

[project.optional-dependencies]
# Motores de OCR/parseo. Se usan recién en F2-2 (comprobantes) y F2-3 (resúmenes);
# el scaffold de F2-1 no los necesita pero quedan declarados para el Dockerfile.
ocr = [
    "pytesseract>=0.3.10",
    "pillow>=10.0",
    "pdfplumber>=0.11",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools]
packages = ["app", "app.parsing", "app.routes"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: usar Depends()/File()/Form() en defaults es el idioma de FastAPI, no un bug.
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
